--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+-e git+https://github.com/pedro9olivares/Clasp-Diagrams.git@620c33ec5eda3d5758ed7cba613fefbc61c17a43#egg=clasp_diagrams
 contourpy==1.3.2
 cycler==0.12.1
 fonttools==4.57.0
@@ -9,9 +11,13 @@ numpy==2.2.5
 packaging==25.0
 pillow==11.2.1
 pluggy==1.6.0
+pydantic==2.11.5
+pydantic_core==2.33.2
 Pygments==2.19.1
 pyparsing==3.2.3
 pytest==8.4.0
 python-dateutil==2.9.0.post0
 six==1.17.0
 sympy==1.14.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
