--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 annotated-types==0.7.0
--e git+https://github.com/pedro9olivares/Clasp-Diagrams.git@620c33ec5eda3d5758ed7cba613fefbc61c17a43#egg=clasp_diagrams
+attrs==25.3.0
+-e git+https://github.com/pedro9olivares/Clasp-Diagrams.git@096436cb7a0cf161863cba9d5e1e1b9f0cc16c62#egg=clasp_diagrams
 contourpy==1.3.2
+coverage==7.8.2
 cycler==0.12.1
 fonttools==4.57.0
+hypothesis==6.135.4
 iniconfig==2.1.0
 kiwisolver==1.4.8
 matplotlib==3.10.1
@@ -18,6 +21,7 @@ pyparsing==3.2.3
 pytest==8.4.0
 python-dateutil==2.9.0.post0
 six==1.17.0
+sortedcontainers==2.4.0
 sympy==1.14.0
 typing-inspection==0.4.1
 typing_extensions==4.14.0
