--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 annotated-types==0.7.0
 attrs==25.3.0
--e git+https://github.com/pedro9olivares/Clasp-Diagrams.git@096436cb7a0cf161863cba9d5e1e1b9f0cc16c62#egg=clasp_diagrams
+//-e git+https://github.com/pedro9olivares/Clasp-Diagrams.git@096436cb7a0cf161863cba9d5e1e1b9f0cc16c62#egg=clasp_diagrams
 contourpy==1.3.2
 coverage==7.8.2
 cycler==0.12.1
