--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -28,13 +28,8 @@ jobs:
         coverage run -m pytest tests/
         coverage report
 
-    - name: Upload coverage report as artifact
-      if: always()
-      uses: actions/upload-artifact@v4
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v3
       with:
-        name: coverage-report
-        path: htmlcov/
-
-    - name: Generate HTML coverage report
-      run: |
-        coverage html
+        name: coverage-report-html
+        path: htmlcov
